--- a/go-web/gin-scaffold/web/header.tmpl
+++ b/go-web/gin-scaffold/web/header.tmpl
@@ -34,13 +34,10 @@
   <body>
     
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto font-weight-normal">票务系统 后台管理</h5>
+  <h5 class="my-0 mr-md-auto font-weight-normal">后台管理</h5>
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark" href="/">首页</a>
-    <a class="p-2 text-dark" href="#">电影</a>
-    <a class="p-2 text-dark" href="#">演出</a>
-    <a class="p-2 text-dark" href="#">活动</a>
-    <a class="p-2 text-dark" href="#">优惠</a>
+    <a class="p-2 text-dark" href="/users">用户</a>
   </nav>
   <a class="btn btn-outline-primary" href="/logout">Logout</a>
 </div>
