--- a/go-web/gin-scaffold/web/user_add.tmpl
+++ b/go-web/gin-scaffold/web/user_add.tmpl
@@ -34,6 +34,13 @@
             </div>
           </div>
 
+          <div class="form-group">
+            <label for="email" class="col-sm-2 control-label">角色</label>
+            <div class="col-sm-12">
+              <input type="text" class="form-control" id="role" name="role" placeholder="请输入角色">
+            </div>
+          </div>
+
          <!--  <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <div class="checkbox">
