--- a/go-web/gin-scaffold/web/users.tmpl
+++ b/go-web/gin-scaffold/web/users.tmpl
@@ -1,62 +1,63 @@
 {{template "header"}}
+<div class="card mb-4 shadow-sm">
+    <table class="table table-bordered">
+      <caption class="col-6 offset-3">
+        <a href="/user/add" type="button" class="btn btn-sm btn-block btn-outline-primary">
+          添加用户
+        </a>
+      </caption>
+      <caption class="col-6 offset-3">
+      每页展示{{ .pages.PageSize }}条记录
+      第{{ .pages.CurrentPage }}页
+      共{{ .pages.TotalRows }}条记录
+      共{{ .pages.TotalPages }}页
+      {{ if gt .pages.CurrentPage 1 }}
+      <a href="/users?currentpage={{ .pages.PreCurrentPage}}">上一页</a>
+      {{ end }}
 
-<div class="container">
-
-  
-  <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h1 class="display-4">用户列表</h1>
-  <p class="lead"></p>
-  </div>
-
-  <div class="card-deck mb-3 text-center">
-    <div class="card mb-4 shadow-sm">
-      <table class="table table-bordered">
-        <caption class="col-6 offset-3">
-          <a href="/user/add" type="button" class="btn btn-sm btn-block btn-outline-primary">
-            添加用户
-          </a>
-        </caption>
-        <thead>
-          <tr>
-            <th>姓名</th>
-            <th>邮箱</th>
-            <th>角色</th>
-            <th>操作</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{range $i, $user := .users}}
-          <tr>
-            <td>{{ $user.Name }}</td>
-            <td>{{ $user.Email }}</td>
-            <td>{{ $user.Role }}</td>
-            <td>
-              <table class="col-12">
-                <tr>
-                  <td style="border: none;">
-                    <form action="/user/update" method="post" class="form-horizontal" role="form" enctype="application/x-www-form-urlencoded">
-                    <input type="hidden" name="uid" id="uid" value="{{ $user.ID }}">
-                    <button type="button" class="btn btn-sm btn-block btn-outline-primary"> 更新 </button>
-                    </form>
-                  </td>
-                  <td style="border: none;">
-                    <form action="/user/delete" method="post" class="form-horizontal" role="form" enctype="application/x-www-form-urlencoded">
-                    <input type="hidden" name="id" id="id" value="{{ $user.ID }}">
-                    <button type="submit" class="btn btn-sm btn-block btn-outline-primary"> 删除 </button>
-                    </form>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-          {{end}}
-        </tbody>
-      </table>
-
-    </div>
-  </div>
-
-
+      {{ if lt .pages.CurrentPage .pages.TotalPages }}
+      <a href="/users?currentpage={{ .pages.NextCurrentPage }}">下一页</a>
+      {{ end }}
+      </caption>
+      <thead>
+        <tr>
+          <th>编号</th>
+          <th>姓名</th>
+          <th>邮箱</th>
+          <th>角色</th>
+          <th>操作</th>
+        </tr>
+      </thead>
+      <tbody>
+        {{range $i, $user := .users}}
+        <tr>
+          <td>{{ $user.ID }}</td>
+          <td>{{ $user.Name }}</td>
+          <td>{{ $user.Email }}</td>
+          <td>{{ $user.Role }}</td>
+          <td>
+            <table class="col-12">
+              <tr>
+                <td style="border: none;">
+                  <form action="/user/update" method="post" class="form-horizontal" role="form" enctype="application/x-www-form-urlencoded">
+                  <input type="hidden" name="id" id="id" value="{{ $user.ID }}">
+                  <input type="hidden" name="updatedata" id="updatedata" value="true">
+                  <button type="submit" class="btn btn-sm btn-block btn-outline-primary"> 更新 </button>
+                  </form>
+                </td>
+                <td style="border: none;">
+                  <form action="/user/delete" method="post" class="form-horizontal" role="form" enctype="application/x-www-form-urlencoded">
+                  <input type="hidden" name="id" id="id" value="{{ $user.ID }}">
+                  <button type="submit" class="btn btn-sm btn-block btn-outline-primary"> 删除 </button>
+                  </form>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+        {{end}}
+      </tbody>
+    </table>
+</div>
 
 {{template "footer"}}
-
