--- a/go-web/gin-scaffold/web/header.tmpl
+++ b/go-web/gin-scaffold/web/header.tmpl
@@ -41,7 +41,7 @@
       <input type="text" class="form-control" placeholder="Search" name="name" id="name"/>
     </div>
     <div class="col-lg-4">
-      <button type="submit" class="btn btn-default">提交</button>
+      <button type="submit" class="btn btn-default">搜索</button>
     </div>
   </div>
 
@@ -53,14 +53,14 @@
 </div>
 </form>
 
-<div class="row">
+<div class="row" style="margin:0px">
   <div class="col-lg-2 border-right" style="border-right: 1px solid rgba(0,0,0,.5);">
     <ul class="align-items-center nav navbar-nav">
-      <li> <a href="/users"> 用户列表 </a> </li>
+      <li> <a href="/users" target="gin-iframe"> 用户列表 </a> </li>
     </ul>
   </div>
 
-  <div class="col-lg-9">
+  <div class="col-lg-10">
 
 
 {{end}}
