update user search

--- a/go-web/gin-scaffold/web/header.tmpl
+++ b/go-web/gin-scaffold/web/header.tmpl
@@ -38,7 +38,8 @@
   <h5 class="my-0 mr-md-auto font-weight-normal">后台管理</h5>
   <div class="row">
     <div class="col-lg-8">
-      <input type="text" class="form-control" placeholder="Search" name="name" id="name"/>
+      <input type="text" class="form-control" placeholder="Search" name="searchKey" id="searchkey"/>
+      <input type="hidden" class="form-control" name="searchKeyOpt" id="searchKeyOpt" value="or"/>
     </div>
     <div class="col-lg-4">
       <button type="submit" class="btn btn-default">搜索</button>
